Fixed: userName not showing up, Changed: cleaned up code structure

--- a/client/src/app/register/register.component.css
+++ b/client/src/app/register/register.component.css
@@ -18,9 +18,7 @@
     border-color:rgb(255, 255, 105);
     background-color: rgb(255, 255, 105);
 }
-.title {
-    color:#000;
-}
+
 .form-control {
     margin-top:10px;
 }
